--- a/ABKids-BackEnd/ABKids-BackEnd.csproj
+++ b/ABKids-BackEnd/ABKids-BackEnd.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Uploads\RewardsPictures\" />
     <Folder Include="Uploads\SavingsGoalPictures\" />
     <Folder Include="Uploads\TaskPictures\" />
     <Folder Include="Uploads\ProfilePictures\" />
