--- a/ABKids-BackEnd/appsettings.json
+++ b/ABKids-BackEnd/appsettings.json
@@ -7,7 +7,7 @@
   },
 
   "ConnectionStrings": {
-    "Con1": "Server=(localdb)\\MSSQLLocalDB;Database=ABKids;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Con1": "Server=(localdb)\\MSSQLLocalDB;Database=ABKids1;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
